# TradingBotMaster.Desktop.Qt

./: .gitignore  .pylintrc  .qmlformat.ini  .qmllint.ini  README.md  backtest.py  pyproject.toml  ruff.toml  trading_view.py
data/trading-view/: TV-PL-Binance_ETHUSDT.P-M15-0001_List_of_Trades_2024-01-13_14c27.csv
playground/: backtest.py  trading_view.py
src/: App.qml  __init__.py  __main__.py  env.py  main.py
src/qtpy/: __init__.py  __init__.pyi  abstractions.py  application.py  environments.py  project.py
src/view_models/: __init__.py  __init__.pyi
tests/unit_tests/: test_first.py
