[project]
name = "RichillCapital.BotMaster.Desktop"
version = "0.0.1"
description = ""
authors = [{ name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com" }]
dependencies = ["pyside6>=6.6.1", "toml>=0.10.2"]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
dev = "python ./src/__main__.py"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "black>=23.12.1",
    "autopep8>=2.0.4",
    "pylint>=3.0.3",
    "pyright>=1.1.345",
    "mypy>=1.8.0",
]
