[project]
name = "TradingBotMaster.Desktop"
version = "1.0.0"
description = ""
authors = [{ name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com" }]
dependencies = ["pyside6>=6.6.1", "toml>=0.10.2", "picologging>=0.9.3"]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
dev = "python ./src/main.py -r"
start = "python ./src/main.py"

format_qml = "pyside6-qmlformat"
lint_qml = "pyside6-qmllint"
format = "ruff format ."
lint = "ruff check ."
lint_f = "ruff cehck . --fix"
lint_w = "ruff check . --watch"
check = { composite = ["pdm run lint_f", "pdm run format"] } 

build = ""
test = ""
publish = ""

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.13",
    "pytest>=7.4.4",
    "pytest-qml>=0.4.0",
    "pytest-qt>=4.3.1",
]
